fix text wrap for index items

--- a/app/assets/stylesheets/components/full_project_form.scss
+++ b/app/assets/stylesheets/components/full_project_form.scss
@@ -129,6 +129,9 @@
   margin: 5px 5px 5px 0;
   height: 43px;
   box-sizing: border-box;
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  appearance: none;
   padding: 12px;
   line-height: 17px;
   background: white;
